# stek-vm

./: CMakeLists.txt  Makefile  README.md  array_int.c  array_int.h  interpret.c  interpret.h  main.c  maybe_int64.c  maybe_int64.h  stack.c  stack.h  stek_vm.c  stek_vm.h  util.c  util.h
